<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

<!-- Изменение тёмной темы   -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_dark_mode"
        android:textSize="18sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <!-- Поле для сохранения имени пользователя -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_saved_username"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextSavedUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_saved_username"
        android:inputType="text"/>

    <!-- сохранение настроек -->
    <Button
        android:id="@+id/buttonSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_settings"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"/>

</LinearLayout>
