<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_el_list"
        android:textSize="@dimen/text_size_default"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="65dp" />

    <Button
        android:id="@+id/buttonItem1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text1"/>

    <Button
        android:id="@+id/buttonItem2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text2"/>

</LinearLayout>